examples/reference/linker_regions_phase6_invalid_section_option_key.err
Assembly failed:
3: ERROR [asm202]
    3 | .section code, bogus=1
                    ^
ERROR: Unknown section option key: bogus
